--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -979,6 +979,17 @@ a#cartcontentsheader {
   padding: 20px;
 }
 
+
+@media only screen and (max-width: 767px)  {
+
+  .carousel-caption-inner {
+    padding: 5px;
+  }
+
+}
+
+
+
 @media only screen and (min-width: 767px)  {
     .homepage-carousel-wrapper {
     height: 550px;
